style.css
@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');

html, body {
  height: 100%;
  width: 100%;
  font-family: 'Poppins', sans-serif;
  color: #222;
  scroll-behavior: smooth;
}
.carousel-inner img {
  width: 100%;
  height: 100%;
}
.carousel-control-icon a span
{
  width: 30px;
  height: 30px;
  filter:drop-shadow(3px 3px 1px #000);
}
.carousel-caption h1 {
  font-size: 325%;
  text-transform: uppercase;
  text-shadow: 2px 2px 3px #000;
}
.carousel-caption h3 {
  font-size: 175%;
  font-weight: 500;
  text-shadow: 2px 2px 2px #000;
  padding-bottom: 1rem;
}
br {
  display: none;
}
.project-video {
  position: relative;
  padding-bottom: 56.25%;
}
.project-video iframe {
  position: absolute;
  top: 45%;
  left: 25%;
  width: 50%;
  height: 50%;
  -moz-box-shadow: #000 5px 5px 15px;
  -webkit-box-shadow: #000 5px 5px 15px;
  -o-box-shadow: #000 5px 5px 15px;
  box-shadow: #000 5px 5px 15px;
  outline: 3px solid white;
}
.project-youtube-icon {
  display: none;
}
.carousel-logo {
  padding-bottom: 10%;
  font-size: 4.5em;
  filter: drop-shadow(2px 2px 2px #000);
}
.carousel-logo a {
  margin: 5%;
}
.carousel-text {
  position: absolute;
  top: 0%;
  bottom: auto;
}
.contribution {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
}
.contribution .jumbotron {
  background-color: rgba(25, 25, 25, 0.5);
  filter: drop-shadow(2px 2px 2px #000);
  padding: 2%;
  border-radius: 5;
}
.contribution p {
  color: #FFF;
  width: 100%;
  text-align: center;
}
.about-me .jumbotron {
  margin: 0;
  padding: 2%;
  border-radius: 0;
}
.padding {
  padding-bottom: 2rem;
}
.skills-logo {
  font-size: 2.5em;
}
.skills-text {
  font-size: 1.5em;
}
.social a {
  font-size: 3.75em;
  padding: 5%;
}

.fa-bitbucket,
.fa-itch-io,
.fa-youtube {
  color: #d5d5d5;
}
.fa-bitbucket:hover,
.fa-itch-io:hover,
.fa-youtube:hover {
  color: #868686;
}

.fa-github {
  color: #6e5494;
}
.social .fa-itch-io {
  color: #FA5C5B;
}
.fa-linkedin {
  color: #0a66c2;
}
.fa-twitter {
  color: #00aced;
}
.fa-github:hover,
.social .fa-itch-io:hover,
.fa-linkedin:hover,
.fa-twitter:hover {
  color: #d5d5d5;
}

footer {
  background-color: #3f3f3f;
  color: #d5d5d5;
  padding-top: 2rem;
}
hr.light {
  border-top: 1px solid #d5d5d5;
  width: 20rem;
  margin-top: .8rem;
  margin-bottom: 1rem;
}
footer a {
  color: #d5d5d5 
}
hr.light-100 {
  border-top: 1px solid #d5d5d5;
  width: 100%;
  margin-top: .8rem;
  margin-bottom: 1rem;
}
hr.dark-100 {
  border-top: 1px solid #181818;
  width: 100%;
  margin: 0;
}




/*---Media Queries --*/
@media (max-width: 992px) {
  .carousel-text {
    top: 0%;
  }
  .carousel-text h1 {
    font-size: 250%;
  }
  .carousel-text h3 {
    font-size: 140%;
    font-weight: 400;
    padding-bottom: .2rem;
  }
  .project-video iframe {
    position: absolute;
    top: 55%;
    left: 30%;
    width: 40%;
    height: 40%;
  }
  .carousel-logo {
    padding-bottom: 12.5%;
    font-size: 3em;
  }
  .carousel-logo a {
    margin: 5%;
  }
  .contribution {
    font-size: 75%;
  }
  .skills-logo {
    font-size: 2em;
  }
  .skills-text {
    font-size: 1.5em;
  }
  .social a {
    font-size: 2.5em;
    padding: 5%;
  }
  }
@media (max-width: 768px) {
  .carousel-text {
    top: 5%;
  }
  .carousel-text h1 {
    font-size: 195%;
  }
  .carousel-text h3 {
    font-size: 110%;
    font-weight: 400;
    padding-bottom: .2rem;
  }
  br {
    display: inline;
  }
  .project-video {
    display: none;
  }
  .project-youtube-icon {
    display: inline;
  }
  .carousel-logo {
    padding-bottom: 12.5%;
    font-size: 2.5em;
  }
  .carousel-logo a {
    margin: 2.5%;
  }
  .contribution {
    font-size: 60%;
  }
  .skills-logo {
    font-size: 1.5em;
  }
  .skills-text {
    font-size: 1.5em;
  }
  .social a {
    font-size: 1.5em;
    padding-left: 7.5%;
    padding-right: 7.5%;
  }
}
@media (max-width: 576px) {
  .carousel-text {
    top: 5%;
  }
  .carousel-text h1 {
    font-size: 150%;
    margin-bottom: 1%;
  }
  .carousel-text h3 {
    font-size: 75%;
  }
  .carousel-logo {
    position: absolute;
    bottom: -140%;
    font-size: 2em;
  }
  .carousel-logo a {
    margin: 3%;
  }
  .contribution .jumbotron {
    padding: 1%;
    padding-bottom: 0%;
    margin: 5%;
    margin-bottom: 20%;
  }
  .carousel-indicators {
    display: none;
  }
  .skills-logo {
    font-size: 1em;
  }
  .skills-text {
    font-size: 1em;
  }
  .social a {
    font-size: 1.75em;
    padding-left: 7.5%;
    padding-right: 7.5%;
  }
}


/*---Firefox Bug Fix --*/
.carousel-item {
  transition: -webkit-transform 0.5s ease;
  transition: transform 0.5s ease;
  transition: transform 0.5s ease, -webkit-transform 0.5s ease;
  -webkit-backface-visibility: visible;
  backface-visibility: visible;
}
/*--- Bootstrap Padding Fix --*/
[class*="col-"] {
    padding: 1rem;
}

